variables.RunFour.scala.code
nBis=0
while (nBis !=4) {
  avance()
  if estSurBiscuit==true{
    	nBis = nBis +1
  	}
}